--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ffmpeg": "^0.0.4",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.523.0",
     "motion": "^12.19.1",
     "next": "15.3.4",
